--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -16,7 +16,11 @@
                 </div>
             </div>
         </form>
+        <div>
         <a asp-action="Create" class="btn btn-success">Register New Client</a>
+        <a asp-action="DownloadClientsListPdf" class="btn btn-primary ml-2">Download List as PDF</a>
+    </div>
+
     </div>
     
     <div class="table-responsive">
